--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-Faz/* Reset básico para o corpo e fontes */
+/* Reset básico para o corpo e fontes */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
