--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ header {
     color: white;
 }
 
-class="logotipo" src="img/logotenis.png" alt="Logotipo da marca"> {
+ {
     width: 20px;
     position: relative;
     top: 20px;
